--- a/app/src/main/res/layout/list_item_all_users.xml
+++ b/app/src/main/res/layout/list_item_all_users.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
               android:layout_width="match_parent"
-              android:layout_height="match_parent">
+              android:layout_height="wrap_content">
 
     <TextView
             android:text="TextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" android:id="@+id/tvUserFullName" android:padding="20dp"
+            android:layout_height="wrap_content" android:id="@+id/tvUserFullName" android:padding="10dp"
             android:textStyle="normal|bold"/>
 </LinearLayout>
